--- a/client/package.json
+++ b/client/package.json
@@ -9,15 +9,19 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.3.1",
     "axios": "^0.27.2",
+    "chart.js": "^4.2.1",
     "flowbite": "^1.5.1",
     "flowbite-react": "^0.1.5",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^4.8.0",
     "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.0.8",
     "react-tooltip": "^4.2.21",
     "styled-components": "^5.3.9",
