--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "nodemon": "^2.0.19"
   },
   "scripts": {
-    "devStart": "nodemon server.js"
+    "devStart": "nodemon server.js",
+    "start": "node server.js"
   }
 }
