--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,6 +3,5 @@ WORKDIR /app
 COPY package.json /app
 RUN npm install
 COPY . /app
-RUN npm install -g nodemon  
-EXPOSE 5000
-CMD [ "nodemon", "server.js"] 
+EXPOSE 3000
+CMD ["npm","run", "start"]
