--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,47 @@
-version: "3.1"
+version: '3.8'
 
 services:
+
+  server:
+    container_name: backendTechstore
+    build: 
+      context: ./backend
+      dockerfile: Dockerfile
+    ports:
+      - 5000:5000
+    volumes:
+      - ./backend:/app
+    depends_on:
+      - mongo
+
+  client:
+    container_name: clientTechstore
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    stdin_open: true
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    volumes:
+      - ./client:/app
+    ports:
+      - 3000:3000
+    depends_on:
+      - server
+
+  nginx:
+    depends_on:
+      - server
+      - client
+    restart: always
+    container_name: controller
+    build:
+      dockerfile: Dockerfile
+      context: ./nginx
+    ports:
+      - "3050:80"
+
+  
   mongo:
     image: mongo
     ports:
@@ -11,15 +52,16 @@ services:
     volumes:
       - ./mydata:/data/db
 
+  
+
   mongo-express:
     image: mongo-express
-
+   
     ports:
       - 8081:8081
-
+    depends_on:
+      - mongo
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: example
       ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
-# volumes:
-#   mongodbdata:
